# HomologyCpp

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
.github/workflows/: GTest.yml
examples/: CMakeLists.txt  mesh.cpp  torus.cpp
homology/: ChainComplex.hpp  mesh.hpp
tests/: CMakeLists.txt  main_test.cpp
